--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
-    "babel-jest": "^25.1.0"
+    "babel-jest": "^25.1.0",
+    "jsdom": "^16.2.0",
+    "prettier": "^1.19.1"
   }
 }
